[package]
name = "ashv2"
description = "Implementation of the Asynchronous Serial Host (ASH) protocol by Silicon Labs."
license = "MIT"
repository = "https://github.com/PaulmannLighting/ashv2"
keywords = ["ASH", "async", "serial", "host"]
categories = ["network-programming"]
documentation = "https://www.silabs.com/documents/public/user-guides/ug101-uart-gateway-protocol-reference.pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", optional = true }
crc = "3.2"
heapless = "0.8"
itertools = "0.12"
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serialport = { version = "4.3", default-features = false }

[features]
clap = ["dep:clap"]
