[package]
name = "ashv2"
description = "Implementation of the Asynchronous Serial Host (ASH) protocol by Silicon Labs."
authors = ["Richard Neumann <neumann@paulmann.de>"]
license = "MIT"
repository = "https://github.com/PaulmannLighting/ashv2"
keywords = ["ASH", "async", "serial", "host"]
categories = ["hardware-support", "network-programming"]
documentation = "https://www.silabs.com/documents/public/user-guides/ug101-uart-gateway-protocol-reference.pdf"
version = "0.1.0"
edition = "2021"
exclude = [".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6"
clap = { version = "4.5", optional = true }
crc = "3.2"
heapless = "0.8"
log = "0.4"
serialport = { version = "4.4", default-features = false }

[dev-dependencies]

[features]
clap = ["dep:clap"]
